@@ -25,4 +25,6 @@ PyObject* RegisterFindCallback(PyObject* module, PyObject* args);
 
 PyObject* RegisterMoveCallback(PyObject* module, PyObject* args);
 
+PyObject* RegisterWorklistCallback(PyObject* module, PyObject* args);
+
 void FinalizeDicomScpCallbacks();
